# XTOpenGL

./: .gitmodules  CMakeLists.txt  README.md  XTOpenGL.sln
AdvancedOpenGL/: AdvancedOpenGL.vcxproj  Camera.cpp  Mesh.cpp  Model.h
LearnOpenGL/: Camera.h  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Mesh.cpp  Mesh.h  Model.cpp  Model.h  main.cpp
LearnOpenGL/shaders/: lighting_shader.frag  lighting_shader.vert
Lighting/: Camera.cpp  Camera.h  Lighting.vcxproj  Lighting.vcxproj.filters  Shader.cpp  glad.c  main.cpp
Lighting/shaders/: light_cube_shader.frag  light_cube_shader.vert  lighting_shader.frag
XTOpenGL/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  XTOpenGL.vcxproj  XTOpenGL.vcxproj.filters  main.cpp
XTOpenGL/shaders/: shader.frag  shader.vert
data/shaders/: shader.frag
include/glad/: glad.h
lib/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  glfw3.lib
src/: camera.hpp  main.cpp  shader.hpp
